--- a/pelican/delphic/static/css/style.css
+++ b/pelican/delphic/static/css/style.css
@@ -5,7 +5,7 @@ jorge@jorgegarcia.io
 
 body {
 	font-family: 'Roboto', sans-serif;
-	color: #7D7D7D;
+	background-image: url(/images/cloudfightduringcovidtimes.jpg);
 	overflow-y:scroll;
 }
 
