--- a/pelican/delphic/static/css/style.css
+++ b/pelican/delphic/static/css/style.css
@@ -6,7 +6,14 @@ jorge@jorgegarcia.io
 body {
 	font-family: 'Roboto', sans-serif;
 	background-image: url(/images/cloudfightduringcovidtimes.jpg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
 	overflow-y:scroll;
+}
+
+.container {
+	color: #7D7D7D;
 }
 
 .logo {
