--- a/pelican/delphic/templates/index.html
+++ b/pelican/delphic/templates/index.html
@@ -9,6 +9,7 @@ Jorge Garcia, Instructional Technologist & Tinkerer from Chicago
 </b>
 <br><br>
 {{ AUTHOR_INTRO }}
+<img id="wide" src="/images/jackson.jpg"g
 <img src="/images/daemon.jpg">
 <img src="/images/moonshot.jpg">
 </p>
