--- a/pelican/delphic/templates/index.html
+++ b/pelican/delphic/templates/index.html
@@ -5,20 +5,16 @@
 <p>    
 <b>
 
-Jorge Garcia, Instructional Technologist & Tinkerer from Chicago
+Jorge Garcia, instructional technologist and amateur bird photographer from <a href="https://makersinchicago.org">Chicago</a>.
 </b>
 <br><br>
 {{ AUTHOR_INTRO }}
-<img class="wide" src="/images/jackson.jpg">
-<img src="/images/daemon.jpg">
+<img class="wide" src="/images/cardinal-by-yorick.jpg">
+<img src="/images/electro.jpg">
 <img src="/images/moonshot.jpg">
 </p>
 <p>
-Most of my efforts today are centered around <a href="https://makersinchicago.org">Makers in Chicago</a>, a tool for directing curious individuals interested in the maker culture around the Chicagoland area. Through this, I am always looking for ways to connect individuals, new and veteraned, connect across Chicago's information silos. I also am available for contract IT services.
-<br><br>
-Previously, I worked extensively with the Chicago Public Library in mutiple roles. My core responsibility and work was with the CPL Maker Lab and YOUmedia Chicago. I served as Maker Specialist II, Lead CS and Make Mentor respectively. I participated in many special projects including, Digitization of Special Collections, VR Working Group, creating Learning Circles, leading a Human Center Design team around Staff Development, and worked closely with administatrive staff to support innovative library programming around emerging and leading technology. I took a leave in June of 2019 to return to school and seek new experiences.
-<br><br>
-Before the Library, I lead an Intro to Web Design workshop at Discovery Center and freelance designed web content for multiple clients who used the CrystalCommerce platform while I managed a small business selling secondhand-market Magic the Gathering for casual and professional players and hosting competitive events. I've also worked in training roles at MicroCenter and Radioshack before that.
+
 <br><br>
 To best reach me, shoot me an email at <a href="mailto:jorge@jorgegarcia.io">jorge@jorgegarcia.io</a>.
 <br><br>
