resized image and fixed front page update

--- a/pelican/delphic/templates/index.html
+++ b/pelican/delphic/templates/index.html
@@ -9,15 +9,11 @@ Jorge Garcia, instructional technologist and amateur bird photographer from <a h
 </b>
 <br><br>
 {{ AUTHOR_INTRO }}
-<img class="wide" src="/images/cardinal-by-yorick.jpg">
+<br>
+To best reach me, shoot me an email at <a href="mailto:jorge@jorgegarcia.io">jorge@jorgegarcia.io</a>.
+<img class="wide" src="/images/cardinal-by-yorick.jpeg">
 <img src="/images/electro.jpg">
 <img src="/images/moonshot.jpg">
-</p>
-<p>
-
-<br><br>
-To best reach me, shoot me an email at <a href="mailto:jorge@jorgegarcia.io">jorge@jorgegarcia.io</a>.
-<br><br>
 <img src="/images/atcpl.jpg">
 <img src="/images/atym.jpg">
 </p>
