--- a/pelican/delphic/templates/index.html
+++ b/pelican/delphic/templates/index.html
@@ -5,7 +5,7 @@
 <p>    
 <b>
 
-Jorge Garcia, instructional technologist and amateur bird photographer from <a href="https://makersinchicago.org">Chicago</a>.
+Jorge Garcia, instructional technologist and professional bird photographer from <a href="https://makersinchicago.org">Chicago</a>.
 </b>
 <br><br>
 {{ AUTHOR_INTRO }}
